[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/GameArea3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Game.gd" type="Script" id=4]

[node name="Game" type="Spatial"]
script = ExtResource( 4 )

[node name="UI" parent="." instance=ExtResource( 3 )]

[node name="GameArea" parent="." instance=ExtResource( 1 )]
[connection signal="game_end" from="." to="UI" method="_on_Game_game_end"]
[connection signal="game_start" from="." to="UI" method="_on_Game_game_start"]
